2007-01-18  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/callbacks.cpp:
	* src/callbacks.h:
	* src/favorites.cpp:
	* src/favorites.h:
	* src/gnome-system-monitor.schemas.in:
	* src/interface.cpp:
	* src/procdialogs.cpp:
	* src/procdialogs.h:
	* src/procman.cpp:
	* src/procman.h:
	* src/proctable.cpp:

	Dropped disabled or dead features.

2007-01-18  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:

	Stores CPU tick frequency as unsigned integer.

2007-01-16  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:
	
	Only use local partitions for disk available count.
	Closes #397405.

2007-01-16  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/defaulttable.h:
	* src/prettytable.cpp:
	* src/prettytable.h:
	* src/procman.cpp:

	Dropped libgnomeui.
	Bumped libgtop dependency to require 2.14;6 to avoid its nasty stack
	smashing bug.
	Bumped version number.

2007-01-08  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.17.5.

2007-01-07  Benoît Dejean  <benoit@placenet.org>

	* src/procman.h:
	* src/proctable.cpp:
	* src/util.cpp:

	Various micro-optimizations based on profiling.
	Changed the type of many ProcInfo members to 'unsigned long' to
	avoid 64bit arithmetic on 32bit system.
	Replaced on g_list_append with g_list_prepend.
	Avoided double comparison in format_file_size_for_display.

2007-01-07  Benoît Dejean  <benoit@placenet.org>

	* src/procman.cpp:
	* src/smooth_refresh.cpp:
	* src/smooth_refresh.h:

	Fixed signedness issue with SmoothRefresh.
	Simplified logic.

2007-01-06  Benoît Dejean  <benoit@placenet.org>

	* src/prettytable.cpp:
	
	Fixed icon lookup order : first wnck, then theme and default table.

2007-01-06  Benoît Dejean  <benoit@placenet.org>

	* src/procdialogs.cpp:
	* src/procman.h:

	Merged some code about spin buttons in the preference dialog.
	Fixed a bunch of warnings.
	
2007-01-06  Benoît Dejean  <benoit@placenet.org>

	* src/interface.cpp:
	