@@ -1,5 +1,12 @@
 2007-01-18  Benoît Dejean  <benoit@placenet.org>
 
+	* src/sysinfo.cpp:
+
+	Killed the logo :/
+	Closes #377144.
+
+2007-01-18  Benoît Dejean  <benoit@placenet.org>
+
 	* src/Makefile.am:
 	* src/callbacks.cpp:
 	* src/callbacks.h:
